apps/volgendeverjaardag/javelin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volgendeverjaardag
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: volgendeverjaardag.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volgendeverjaardag-client
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: volgendeverjaardag-server
                port:
                  name: http
